corrected the link

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -36,7 +36,9 @@
 
         <div class="col-md-2">
           <div class="Info">
-            <a class="Infos mb-5 text-center" href="../About.html">About Me</a>
+            <a class="Infos mb-5 text-center" href="../Homepage/About.html"
+              >About Me</a
+            >
             <a class="Infos mb-5 text-center" href="#">My Works</a>
             <a class="Infos mb-5 text-center" href="#"> Other Services </a>
             <a class="Infos text-center" href="#">Contact</a>
