--- a/Homepage/About.html
+++ b/Homepage/About.html
@@ -5,8 +5,508 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="../Homepage/About.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   </head>
   <body>
-    Hi
+    <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#"
+          ><img src="../src/Logo.png" width="50"
+        /></a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarNavAltMarkup"
+        >
+          <div class="navbar-nav">
+            <a
+              class="nav-link active d-flex justify-content-center text-warning-emphasis"
+              aria-current="page"
+              href="#"
+              >About Me</a
+            >
+            <a
+              class="nav-link text-warning-emphasis d-flex justify-content-center"
+              href="#"
+              >My Works</a
+            >
+            <a
+              class="nav-link text-warning-emphasis d-flex justify-content-center"
+              href="#"
+              >Other Services</a
+            >
+            <a
+              class="nav-link text-warning-emphasis d-flex justify-content-center"
+              href="#"
+              >Contact Me</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="header">
+      <h1 class="heading text-center mb-3">About Me</h1>
+      <h2 class="head2 text-center">
+        I am a Front end developer based in the UK
+      </h2>
+    </div>
+    <div class="body">
+      <div class="row">
+        <div class="col-sm-7">
+          <h3 class="text-center head">I am a Front End developer</h3>
+          <p class="content text-center">
+            content content content content content content content content
+            content content content content content content content content
+            content content content content content content content content
+            content content content content content content content content
+            content content content content content content content content
+          </p>
+        </div>
+        <div class="col-sm-5">
+          <img src="../src/Divine2.png" class="img-fluid ddpic" width="400" />
+        </div>
+      </div>
+      <h4 class="heading4">My Services</h4>
+      <div class="row">
+        <div class="col-sm-4 mb-5 mb-sm-0 d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <img src="../src/Webdevo.png" class="card-img-top mb-3" alt="..." />
+              <p class="card-text text-center mt-3">HTML & CSS</p>
+
+              <a href="#" class="link">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 mb-5 mb-sm-0 d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <img src="../src/UX.png" class="card-img-top mb-3" alt="..." />
+              <p class="card-text">Design Website and Mobile apps layout</p>
+
+              <a href="#" class="link">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-4 d-flex justify-content-center">
+          <div class="card" style="width: 18rem">
+            <div class="card-body">
+              <img src="../src/Write.png" class="card-img-top mb-3" alt="..." />
+              <p class="card-text">
+                I provide article writting and research services as well as
+                Public speaking
+              </p>
+
+              <a href="#" class="link">Go somewhere</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="heading5">My Skills</div>
+      <div class="wrap-circles Prog">
+        <div class="circle per-95">
+          <div class="inner text-center">HTML</br>95%</div>
+        </div>
+        <div class="circle per-90">
+          <div class="inner text-center">CSS</br> 90%</div>
+        </div>
+        <div class="circle per-98">
+          <div class="inner text-center">Bootstrap 98%</div>
+        </div>
+        <div class="circle per-50">
+          <div class="inner text-center">Javascript 50%</div>
+        </div>
+        <div class="circle per-95">
+          <div class="inner text-center">Web Hosting 95%</div>
+        </div>
+      </div>
+      <div class="heading6 text-center">Featured projects</div>
+      <div class="content-width">
+        
+  <div class="slideshow">
+   <div class="slideshow-items">
+      <div class="item">
+        <div class="item-image-container">
+          <img class="item-image" src="../src/Weatherapp.png" />
+        </div>
+        <div class="item-header">
+          <span class="vertical-part"><b>W</b></span>
+          <span class="vertical-part"><b>e</b></span>
+          <span class="vertical-part"><b>a</b></span>
+          <span class="vertical-part"><b>t</b></span>
+          <span class="vertical-part"><b>h</b></span>
+          <span class="vertical-part"><b>e</b></span>
+          <span class="vertical-part"><b>r</b></span>
+          <span class="vertical-part"><b>-</b></span>
+          <span class="vertical-part"><b>a</b></span>
+          <span class="vertical-part"><b>p</b></span>
+          <span class="vertical-part"><b>p</b></span>
+        </div>
+        <div class="item-description">
+          <span class="vertical-part">
+            <b>Nike</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum</b>
+          </span> 
+          <span class="vertical-part">
+            <b>dolor</b>
+          </span>
+          <span class="vertical-part">
+            <b>sit</b>
+          </span> 
+          <span class="vertical-part">
+            <b>amet,</b>
+          </span>
+          <span class="vertical-part">
+            <b>consectetur</b>
+          </span> 
+          <span class="vertical-part">
+            <b>adipiscing</b>
+          </span>
+          <span class="vertical-part">
+            <b>elit.</b>
+          </span> 
+          <span class="vertical-part">
+            <b>Pellentesque</b>
+          </span>
+          <span class="vertical-part">
+            <b>elementum</b>
+          </span> 
+          <span class="vertical-part">
+            <b>gravida</b>
+          </span>
+          <span class="vertical-part">
+            <b>ex</b>
+          </span> 
+          <span class="vertical-part">
+            <b>at</b>
+          </span>
+          <span class="vertical-part">
+            <b>maximus.</b>
+          </span> 
+          <span class="vertical-part">
+            <b>Nullam</b>
+          </span>
+          <span class="vertical-part">
+            <b>quis</b>
+          </span> 
+          <span class="vertical-part">
+            <b>leo</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum.</b>
+          </span> 
+          <span class="vertical-part">
+            <b>Lorem</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum</b>
+          </span> 
+          <span class="vertical-part">
+            <b>Nam</b>
+          </span> 
+          <span class="vertical-part">
+            <b>consectetur</b>
+          </span>
+          <span class="vertical-part">
+            <b>malesuada</b>
+          </span> 
+          <span class="vertical-part">
+            <b>blandit.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Mauris</b>
+          </span> 
+          <span class="vertical-part">
+            <b>vulputate</b>
+          </span>
+          <span class="vertical-part">
+            <b>purus</b>
+          </span> 
+          <span class="vertical-part">
+            <b>id</b>
+          </span>
+          <span class="vertical-part">
+            <b>dolor</b>
+          </span> 
+          <span class="vertical-part">
+            <b>euismod</b>
+          </span>
+          <span class="vertical-part">
+            <b>varius.</b>
+          </span>      
+        </div>
+      </div>
+      <div class="item">
+        <div class="item-image-container">
+          <img class="item-image" src="../src/NGO2.png" />
+        </div>
+        <div class="item-header">
+          <span class="vertical-part"><b>N</b></span>
+          <span class="vertical-part"><b>G</b></span>
+          <span class="vertical-part"><b>O</b></span>
+          <span class="vertical-part"><b>-</b></span>
+          <span class="vertical-part"><b>p</b></span>
+          <span class="vertical-part"><b>a</b></span>
+          <span class="vertical-part"><b>g</b></span>
+          <span class="vertical-part"><b>e</b></span>
+        </div>
+        <div class="item-description">
+          <span class="vertical-part">
+            <b>Spotify</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum</b>
+          </span>
+          <span class="vertical-part">
+            <b>dolor</b>
+          </span>
+          <span class="vertical-part">
+            <b>sit</b>
+          </span>
+          <span class="vertical-part">
+            <b>amet,</b>
+          </span>
+          <span class="vertical-part">
+            <b>consectetur</b>
+          </span>
+          <span class="vertical-part">
+            <b>adipiscing</b>
+          </span>
+          <span class="vertical-part">
+            <b>elit.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Pellentesque</b>
+          </span>
+          <span class="vertical-part">
+            <b>elementum</b>
+          </span>
+          <span class="vertical-part">
+            <b>gravida</b>
+          </span>
+          <span class="vertical-part">
+            <b>ex</b>
+          </span>
+          <span class="vertical-part">
+            <b>at</b>
+          </span>
+          <span class="vertical-part">
+            <b>maximus.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Nullam</b>
+          </span>
+          <span class="vertical-part">
+            <b>quis</b>
+          </span>
+          <span class="vertical-part">
+            <b>leo</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Lorem</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum</b>
+          </span>
+          <span class="vertical-part">
+            <b>Nam</b>
+          </span>
+          <span class="vertical-part">
+            <b>consectetur</b>
+          </span>
+          <span class="vertical-part">
+            <b>malesuada</b>
+          </span>
+          <span class="vertical-part">
+            <b>blandit.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Mauris</b>
+          </span>
+          <span class="vertical-part">
+            <b>vulputate</b>
+          </span>
+          <span class="vertical-part">
+            <b>purus</b>
+          </span>
+          <span class="vertical-part">
+            <b>id</b>
+          </span>
+          <span class="vertical-part">
+            <b>dolor</b>
+          </span>
+          <span class="vertical-part">
+            <b>euismod</b>
+          </span>
+          <span class="vertical-part">
+            <b>varius.</b>
+          </span>
+        </div>
+      </div>
+      <div class="item">
+        <div class="item-image-container">
+          <img class="item-image" src="../src/yoga.png" />
+        </div>
+        <div class="item-header">
+          <span class="vertical-part"><b>Y</b></span>
+          <span class="vertical-part"><b>o</b></span>
+          <span class="vertical-part"><b>g</b></span>
+          <span class="vertical-part"><b>a</b></span>
+          <span class="vertical-part"><b>-</b></span>
+          <span class="vertical-part"><b>p</b></span>
+          <span class="vertical-part"><b>a</b></span>
+          <span class="vertical-part"><b>g</b></span>
+          <span class="vertical-part"><b>e</b></span>
+        </div>
+        <div class="item-description">
+          
+          <span class="vertical-part">
+            <b>Airbnb</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum</b>
+          </span>
+          <span class="vertical-part">
+            <b>dolor</b>
+          </span>
+          <span class="vertical-part">
+            <b>sit</b>
+          </span>
+          <span class="vertical-part">
+            <b>amet,</b>
+          </span>
+          <span class="vertical-part">
+            <b>consectetur</b>
+          </span>
+          <span class="vertical-part">
+            <b>adipiscing</b>
+          </span>
+          <span class="vertical-part">
+            <b>elit.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Pellentesque</b>
+          </span>
+          <span class="vertical-part">
+            <b>elementum</b>
+          </span>
+          <span class="vertical-part">
+            <b>gravida</b>
+          </span>
+          <span class="vertical-part">
+            <b>ex</b>
+          </span>
+          <span class="vertical-part">
+            <b>at</b>
+          </span>
+          <span class="vertical-part">
+            <b>maximus.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Nullam</b>
+          </span>
+          <span class="vertical-part">
+            <b>quis</b>
+          </span>
+          <span class="vertical-part">
+            <b>leo</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Lorem</b>
+          </span>
+          <span class="vertical-part">
+            <b>ipsum</b>
+          </span>
+          <span class="vertical-part">
+            <b>Nam</b>
+          </span>
+          <span class="vertical-part">
+            <b>consectetur</b>
+          </span>
+          <span class="vertical-part">
+            <b>malesuada</b>
+          </span>
+          <span class="vertical-part">
+            <b>blandit.</b>
+          </span>
+          <span class="vertical-part">
+            <b>Mauris</b>
+          </span>
+          <span class="vertical-part">
+            <b>vulputate</b>
+          </span>
+          <span class="vertical-part">
+            <b>purus</b>
+          </span>
+          <span class="vertical-part">
+            <b>id</b>
+          </span>
+          <span class="vertical-part">
+            <b>dolor</b>
+          </span>
+          <span class="vertical-part">
+            <b>euismod</b>
+          </span>
+          <span class="vertical-part">
+            <b>varius.</b>
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="controls">
+      <ul>
+        <li class="control" data-index="0"></li>
+        <li class="control" data-index="1"></li>
+        <li class="control" data-index="2"></li>
+      </ul>
+    </div>
+    </div>
+</div>
+<footer>
+<div class="footer-basic">
+    <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+    <ul class="list-inline">
+      <li class="list-inline-item"><a href="#">Home</a></li>
+      <li class="list-inline-item"><a href="#">Services</a></li>
+      <li class="list-inline-item"><a href="#">About</a></li>
+      <li class="list-inline-item"><a href="#">Terms</a></li>
+      <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+    </ul>
+    <p class="copyright">Company Name © 2018</p>
+  </footer>
+</div>
+</div>  
+    <script src="../Homepage/index.js" type="text/javascript"></script> 
   </body>
 </html>
