--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -36,7 +36,7 @@
 
         <div class="col-md-2">
           <div class="Info">
-            <a class="Infos mb-5 text-center" href="../Homepage/About.html"
+            <a class="Infos mb-5 text-center" href="Homepage/About.html"
               >About Me</a
             >
             <a class="Infos mb-5 text-center" href="#">My Works</a>
