corrected the links

--- a/Homepage/About.html
+++ b/Homepage/About.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"
-          ><img src="../src/Logo.png" width="50"
+          ><img src="src/Logo.png" width="50"
         /></a>
         <button
           class="navbar-toggler"
@@ -86,7 +86,7 @@
           </p>
         </div>
         <div class="col-sm-5">
-          <img src="../src/Divine2.png" class="img-fluid ddpic" width="400" />
+          <img src="src/Divine2.png" class="img-fluid ddpic" width="400" />
         </div>
       </div>
       <h4 class="heading4">My Services</h4>
@@ -94,7 +94,7 @@
         <div class="col-sm-4 mb-5 mb-sm-0 d-flex justify-content-center">
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <img src="../src/Webdevo.png" class="card-img-top mb-3" alt="..." />
+              <img src="src/Webdevo.png" class="card-img-top mb-3" alt="..." />
               <p class="card-text text-center mt-3">HTML & CSS</p>
 
               <a href="#" class="link">Go somewhere</a>
@@ -104,7 +104,7 @@
         <div class="col-sm-4 mb-5 mb-sm-0 d-flex justify-content-center">
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <img src="../src/UX.png" class="card-img-top mb-3" alt="..." />
+              <img src="src/UX.png" class="card-img-top mb-3" alt="..." />
               <p class="card-text">Design Website and Mobile apps layout</p>
 
               <a href="#" class="link">Go somewhere</a>
@@ -114,7 +114,7 @@
         <div class="col-sm-4 d-flex justify-content-center">
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <img src="../src/Write.png" class="card-img-top mb-3" alt="..." />
+              <img src="src/Write.png" class="card-img-top mb-3" alt="..." />
               <p class="card-text">
                 I provide article writting and research services as well as
                 Public speaking
@@ -150,7 +150,7 @@
    <div class="slideshow-items">
       <div class="item">
         <div class="item-image-container">
-          <img class="item-image" src="../src/Weatherapp.png" />
+          <img class="item-image" src="src/Weatherapp.png" />
         </div>
         <div class="item-header">
           <span class="vertical-part"><b>W</b></span>
@@ -263,7 +263,7 @@
       </div>
       <div class="item">
         <div class="item-image-container">
-          <img class="item-image" src="../src/NGO2.png" />
+          <img class="item-image" src="src/NGO2.png" />
         </div>
         <div class="item-header">
           <span class="vertical-part"><b>N</b></span>
@@ -373,7 +373,7 @@
       </div>
       <div class="item">
         <div class="item-image-container">
-          <img class="item-image" src="../src/yoga.png" />
+          <img class="item-image" src="src/yoga.png" />
         </div>
         <div class="item-header">
           <span class="vertical-part"><b>Y</b></span>
