--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -22,11 +22,11 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="../src/Logo.png" class="logo" />
-          <img src="../src/Divine.png" class="img-fluid ddpic" />
+          <img src="src/Logo.png" class="logo" />
+          <img src="src/Divine.png" class="img-fluid ddpic" />
         </div>
         <div class="col-sm-6">
-          <img src="../src/Port.png" class="Port" />
+          <img src="src/Port.png" class="Port" />
           <div class="text-center name">
             <h1 class="heading1">Hello!</h1>
             <h2>I'm Divine Joseph</h2>
@@ -36,7 +36,7 @@
 
         <div class="col-md-2">
           <div class="Info">
-            <a href="../Homepage/About.html" class="Infos mb-5 text-center"
+            <a class="Infos mb-5 text-center" href="../Homepage/About.html"
               >About Me</a
             >
             <a class="Infos mb-5 text-center" href="#">My Works</a>
