rearranged the files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="../Homepage/index.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="container">
@@ -36,9 +36,7 @@
 
         <div class="col-md-2">
           <div class="Info">
-            <a href="../Homepage/About.html" class="Infos mb-5 text-center"
-              >About Me</a
-            >
+            <a href="About.html" class="Infos mb-5 text-center">About Me</a>
             <a class="Infos mb-5 text-center" href="#">My Works</a>
             <a class="Infos mb-5 text-center" href="#"> Other Services </a>
             <a class="Infos text-center" href="#">Contact</a>
