--- a/About.html
+++ b/About.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../Homepage/About.css" />
+    <link rel="stylesheet" href="About.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -507,6 +507,6 @@
   </footer>
 </div>
 </div>  
-    <script src="../Homepage/index.js" type="text/javascript"></script> 
+    <script src="index.js" type="text/javascript"></script> 
   </body>
 </html>
