linked logo to homepage

--- a/About.html
+++ b/About.html
@@ -23,7 +23,7 @@
   <body>
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"
+        <a class="navbar-brand" href="index.html"
           ><img src="src/Logo.png" width="50"
         /></a>
         <button
