--- a/About.html
+++ b/About.html
@@ -45,12 +45,12 @@
             <a
               class="nav-link active d-flex justify-content-center text-warning-emphasis"
               aria-current="page"
-              href="#"
+              href="About.html"
               >About Me</a
             >
             <a
               class="nav-link text-warning-emphasis d-flex justify-content-center"
-              href="#"
+              href="Works.html"
               >My Works</a
             >
             <a
@@ -495,18 +495,20 @@
 </div>
 <footer>
 <div class="footer-basic">
-    <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
+    <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
     <ul class="list-inline">
-      <li class="list-inline-item"><a href="#">Home</a></li>
-      <li class="list-inline-item"><a href="#">Services</a></li>
-      <li class="list-inline-item"><a href="#">About</a></li>
+      <li class="list-inline-item"><a href="index.html">Home</a></li>
+      <li class="list-inline-item"><a href="About.html">About</a></li>
+      <li class="list-inline-item"><a href="Works.html">Works</a></li>
       <li class="list-inline-item"><a href="#">Terms</a></li>
       <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
     </ul>
-    <p class="copyright">Company Name © 2018</p>
+    <p class="copyright">Divine Joseph © 2023</p>
   </footer>
 </div>
 </div>  
     <script src="index.js" type="text/javascript"></script> 
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
