--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <div class="col-md-2">
           <div class="Info">
             <a href="About.html" class="Infos mb-5 text-center">About Me</a>
-            <a class="Infos mb-5 text-center" href="#">My Works</a>
+            <a class="Infos mb-5 text-center" href="Works.html">My Works</a>
             <a class="Infos mb-5 text-center" href="#"> Other Services </a>
             <a class="Infos text-center" href="#">Contact</a>
           </div>
