--- a/Works.html
+++ b/Works.html
@@ -55,11 +55,6 @@
             <a
               class="nav-link text-warning-emphasis d-flex justify-content-center"
               href="#"
-              >Other Services</a
-            >
-            <a
-              class="nav-link text-warning-emphasis d-flex justify-content-center"
-              href="#"
               >Contact Me</a
             >
           </div>
@@ -72,22 +67,46 @@
         I am a Front end developer based in the UK
       </h2>
     </div>
-    <footer>
-<div class="footer-basic">
-    <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
-    <ul class="list-inline">
-      <li class="list-inline-item"><a href="index.html">Home</a></li>
-      <li class="list-inline-item"><a href="About.html">About</a></li>
-      <li class="list-inline-item"><a href="Works.html">Works</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
-    </ul>
-    <p class="copyright">Divine Joseph © 2023</p>
-  </footer>
-</div>
-</div>  
-    <script src="index.js" type="text/javascript"></script> 
-    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <div class="body">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-6">
+          <img src="src/Weatherapp.png" class="img1 rounded"/>
+        </div>
+        <div class="col-sm-6">
+          <h3 class="text-center project-head">Weather App</h3>
+          <p>ddddddddddddddddddddg ghhhhhhhhhhh jjj kkkkk jjjjj jk jkm ohjjnnnkk jjkmmmkk jjmmmmk jjnkkk kkkjkkkk jjmmm,, jjmmn jkmmn </p>
+          <a class="project-link" href="https://blue-aesthetic-weather-app.netlify.app/">See Project</a>
+        </div>  
+      </div>
+       <div class="row">
+        <div class="col-sm-6">
+          <h3 class="text-center project-head">NGO Landing Page</h3>
+          <p>ddddddddddddddddddddg ghhhhhhhhhhh jjj kkkkk jjjjj jk jkm ohjjnnnkk jjkmmmkk jjmmmmk jjnkkk kkkjkkkk jjmmm,, jjmmn jkmmn </p>
+          <a class="project-link" href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/414/654/original/project-1.html?1674433084">See Project</a>
+          </div>
+          <div class="col-sm-6">
+            <img src="src/NGO2.png" class="img1 rounded"/>
+          </div>
+        </div>
+    </div>
+    <div class="footer">
+      <div class="footer-basic">
+        <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a href="index.html">Home</a></li>
+          <li class="list-inline-item"><a href="About.html">About</a></li>
+          <li class="list-inline-item"><a href="Works.html">Works</a></li>
+          <li class="list-inline-item"><a href="#">Terms</a></li>
+          <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+        </ul>
+        <p class="copyright">Divine Joseph © 2023</p>
+      </div>
+    </div>
+    </div>
+  </div>  
+  <script src="index.js" type="text/javascript"></script> 
+  <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+  <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
