linked contact page

--- a/About.html
+++ b/About.html
@@ -55,7 +55,7 @@
             >
             <a
               class="nav-link text-warning-emphasis d-flex justify-content-center"
-              href="#"
+              href="Contact.html"
               >Contact Me</a
             >
           </div>
