--- a/Works.html
+++ b/Works.html
@@ -54,7 +54,7 @@
             >
             <a
               class="nav-link text-warning-emphasis d-flex justify-content-center"
-              href="#"
+              href="Contact.html"
               >Contact Me</a
             >
           </div>
@@ -71,7 +71,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="src/Weatherapp.png" class="img1 rounded"/>
+          <img src="src/Weatherapp.png" class="img1 rounded img-fluid"/>
         </div>
         <div class="col-sm-6">
           <h3 class="text-center project-head">Weather App</h3>
@@ -86,7 +86,7 @@
           <a class="project-link" href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/414/654/original/project-1.html?1674433084">See Project</a>
           </div>
           <div class="col-sm-6">
-            <img src="src/NGO2.png" class="img1 rounded"/>
+            <img src="src/NGO2.png" class="img1 rounded img-fluid"/>
           </div>
         </div>
     </div>
