Updated contact page

--- a/Contact.html
+++ b/Contact.html
@@ -127,7 +127,7 @@
           <ul class="contact-list">
             <li class="list-item">
               <i class="fa fa-map-marker fa-2x"
-                ><span class="contact-text place">City, State</span></i
+                ><span class="contact-text place">Coventry, UK</span></i
               >
             </li>
 
@@ -135,7 +135,7 @@
               <i class="fa fa-phone fa-2x"
                 ><span class="contact-text phone"
                   ><a href="tel:1-212-555-5555" title="Give me a call"
-                    >(212) 555-2368</a
+                    >(+44) 7482440726</a
                   ></span
                 ></i
               >
@@ -155,7 +155,7 @@
           </ul>
 
           <hr />
-          <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
+          <div class="social"><a href="https://www.instagram.com/itsdivine_joseph2/"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://twitter.com/itsdivinejoseph"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/feed/"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
           </ul>
           <hr />
 
