Updated page content and links

--- a/About.html
+++ b/About.html
@@ -16,7 +16,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
-    ></script>
+      ></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   </head>
@@ -73,12 +73,9 @@
         <div class="col-sm-7">
           <h3 class="text-center head">I am a Front End developer</h3>
           <p class="content text-center">
-            content content content content content content content content
-            content content content content content content content content
-            content content content content content content content content
-            content content content content content content content content
-            content content content content content content content content
+            I am an 18 years old frontend developer passionate about web development and designing layouts of a website. It all began back in secondary school when I had my first encounter with programming through a python workshop. Ever since that moment, I've been captivated by the vast and exciting world of development, leading me to seek further knowledge and expertise through courses at She Codes. It was during this enriching journey that I developed a profound affection for Frontend development. To delve deeper into my experiences and qualifications, you can find more details on my LinkedIn CV.
           </p>
+          <a class="CV-link" href="https://www.linkedin.com/in/divine-joseph-18902b254/"> Go to CV</a>
         </div>
         <div class="col-sm-5">
           <img src="src/Divine2.png" class="img-fluid ddpic" width="400" />
@@ -92,7 +89,7 @@
               <img src="src/Webdevo.png" class="card-img-top mb-3" alt="..." />
               <p class="card-text text-center mt-3">HTML & CSS</p>
 
-              <a href="#" class="link">Go somewhere</a>
+              <a href="Works.html" class="link">See more</a>
             </div>
           </div>
         </div>
@@ -100,22 +97,21 @@
           <div class="card" style="width: 18rem">
             <div class="card-body">
               <img src="src/UX.png" class="card-img-top mb-3" alt="..." />
-              <p class="card-text">Design Website and Mobile apps layout</p>
+              <p class="card-text text-center">UI/UX Design</p>
 
-              <a href="#" class="link">Go somewhere</a>
+              <a href="Works.html" class="link">See more</a>
             </div>
           </div>
         </div>
         <div class="col-sm-4 d-flex justify-content-center">
           <div class="card" style="width: 18rem">
             <div class="card-body">
-              <img src="src/Write.png" class="card-img-top mb-3" alt="..." />
-              <p class="card-text">
-                I provide article writting and research services as well as
-                Public speaking
+              <img src="src/Github.png" class="card-img-top mb-3" alt="..." />
+              <p class="card-text text-center">
+                Web Hosting and Github
               </p>
 
-              <a href="#" class="link">Go somewhere</a>
+              <a href="Works.html" class="link">See more</a>
             </div>
           </div>
         </div>
@@ -162,98 +158,89 @@
         </div>
         <div class="item-description">
           <span class="vertical-part">
-            <b>Nike</b>
+            <b>I</b>
           </span>
           <span class="vertical-part">
-            <b>ipsum</b>
+            <b>created</b>
           </span> 
           <span class="vertical-part">
-            <b>dolor</b>
+            <b>this</b>
           </span>
           <span class="vertical-part">
-            <b>sit</b>
+            <b>weather</b>
           </span> 
           <span class="vertical-part">
-            <b>amet,</b>
+            <b>app</b>
           </span>
           <span class="vertical-part">
-            <b>consectetur</b>
+            <b>for</b>
           </span> 
           <span class="vertical-part">
-            <b>adipiscing</b>
+            <b>my</b>
           </span>
           <span class="vertical-part">
-            <b>elit.</b>
+            <b>Shecodes</b>
           </span> 
           <span class="vertical-part">
-            <b>Pellentesque</b>
+            <b>plus</b>
           </span>
           <span class="vertical-part">
-            <b>elementum</b>
+            <b>final</b>
           </span> 
           <span class="vertical-part">
-            <b>gravida</b>
+            <b>project</b>
           </span>
           <span class="vertical-part">
-            <b>ex</b>
+            <b>using</b>
           </span> 
           <span class="vertical-part">
-            <b>at</b>
+            <b>HTML, </b>
           </span>
           <span class="vertical-part">
-            <b>maximus.</b>
+            <b>Javascript</b>
           </span> 
           <span class="vertical-part">
-            <b>Nullam</b>
+            <b>and</b>
           </span>
           <span class="vertical-part">
-            <b>quis</b>
+            <b>CSS.</b>
           </span> 
           <span class="vertical-part">
-            <b>leo</b>
+            <b>It</b>
           </span>
           <span class="vertical-part">
-            <b>ipsum.</b>
+            <b>tells</b>
           </span> 
           <span class="vertical-part">
-            <b>Lorem</b>
+            <b>the</b>
           </span>
           <span class="vertical-part">
-            <b>ipsum</b>
+            <b>temperature, </b>
           </span> 
           <span class="vertical-part">
-            <b>Nam</b>
+            <b>humidity, </b>
           </span> 
           <span class="vertical-part">
-            <b>consectetur</b>
+            <b>windspeed</b>
           </span>
           <span class="vertical-part">
-            <b>malesuada</b>
+            <b>and</b>
           </span> 
           <span class="vertical-part">
-            <b>blandit.</b>
+            <b>time</b>
           </span>
           <span class="vertical-part">
-            <b>Mauris</b>
+            <b>of</b>
           </span> 
           <span class="vertical-part">
-            <b>vulputate</b>
+            <b>any</b>
           </span>
           <span class="vertical-part">
-            <b>purus</b>
+            <b>searched</b>
           </span> 
           <span class="vertical-part">
-            <b>id</b>
-          </span>
-          <span class="vertical-part">
-            <b>dolor</b>
-          </span> 
-          <span class="vertical-part">
-            <b>euismod</b>
-          </span>
-          <span class="vertical-part">
-            <b>varius.</b>
-          </span>      
+            <b>location.</b>
+          </span>  
         </div>
       </div>
       <div class="item">
@@ -272,209 +259,64 @@
         </div>
         <div class="item-description">
           <span class="vertical-part">
-            <b>Spotify</b>
+            <b>I</b>
           </span>
           <span class="vertical-part">
-            <b>ipsum</b>
+            <b>made</b>
           </span>
           <span class="vertical-part">
-            <b>dolor</b>
+            <b>an</b>
           </span>
           <span class="vertical-part">
-            <b>sit</b>
+            <b>NGO</b>
           </span>
           <span class="vertical-part">
-            <b>amet,</b>
+            <b>landing</b>
           </span>
           <span class="vertical-part">
-            <b>consectetur</b>
+            <b>page</b>
           </span>
           <span class="vertical-part">
-            <b>adipiscing</b>
+            <b>on</b>
           </span>
           <span class="vertical-part">
-            <b>elit.</b>
+            <b>Leukemia</b>
           </span>
           <span class="vertical-part">
-            <b>Pellentesque</b>
+            <b>awareness</b>
           </span>
           <span class="vertical-part">
-            <b>elementum</b>
+            <b>as</b>
           </span>
           <span class="vertical-part">
-            <b>gravida</b>
+            <b>my</b>
           </span>
           <span class="vertical-part">
-            <b>ex</b>
+            <b>Shecodes</b>
           </span>
           <span class="vertical-part">
-            <b>at</b>
+            <b>basic</b>
           </span>
           <span class="vertical-part">
-            <b>maximus.</b>
+            <b>final</b>
           </span>
           <span class="vertical-part">
-            <b>Nullam</b>
+            <b>project</b>
           </span>
           <span class="vertical-part">
-            <b>quis</b>
+            <b>using</b>
           </span>
           <span class="vertical-part">
-            <b>leo</b>
+            <b>HTML, </b>
           </span>
           <span class="vertical-part">
-            <b>ipsum.</b>
+            <b>Javascript</b>
           </span>
           <span class="vertical-part">
-            <b>Lorem</b>
+            <b>and</b>
           </span>
           <span class="vertical-part">
-            <b>ipsum</b>
-          </span>
-          <span class="vertical-part">
-            <b>Nam</b>
-          </span>
-          <span class="vertical-part">
-            <b>consectetur</b>
-          </span>
-          <span class="vertical-part">
-            <b>malesuada</b>
-          </span>
-          <span class="vertical-part">
-            <b>blandit.</b>
-          </span>
-          <span class="vertical-part">
-            <b>Mauris</b>
-          </span>
-          <span class="vertical-part">
-            <b>vulputate</b>
-          </span>
-          <span class="vertical-part">
-            <b>purus</b>
-          </span>
-          <span class="vertical-part">
-            <b>id</b>
-          </span>
-          <span class="vertical-part">
-            <b>dolor</b>
-          </span>
-          <span class="vertical-part">
-            <b>euismod</b>
-          </span>
-          <span class="vertical-part">
-            <b>varius.</b>
-          </span>
-        </div>
-      </div>
-      <div class="item">
-        <div class="item-image-container">
-          <img class="item-image" src="src/yoga.png" />
-        </div>
-        <div class="item-header">
-          <span class="vertical-part"><b>Y</b></span>
-          <span class="vertical-part"><b>o</b></span>
-          <span class="vertical-part"><b>g</b></span>
-          <span class="vertical-part"><b>a</b></span>
-          <span class="vertical-part"><b>-</b></span>
-          <span class="vertical-part"><b>p</b></span>
-          <span class="vertical-part"><b>a</b></span>
-          <span class="vertical-part"><b>g</b></span>
-          <span class="vertical-part"><b>e</b></span>
-        </div>
-        <div class="item-description">
-          
-          <span class="vertical-part">
-            <b>Airbnb</b>
-          </span>
-          <span class="vertical-part">
-            <b>ipsum</b>
-          </span>
-          <span class="vertical-part">
-            <b>dolor</b>
-          </span>
-          <span class="vertical-part">
-            <b>sit</b>
-          </span>
-          <span class="vertical-part">
-            <b>amet,</b>
-          </span>
-          <span class="vertical-part">
-            <b>consectetur</b>
-          </span>
-          <span class="vertical-part">
-            <b>adipiscing</b>
-          </span>
-          <span class="vertical-part">
-            <b>elit.</b>
-          </span>
-          <span class="vertical-part">
-            <b>Pellentesque</b>
-          </span>
-          <span class="vertical-part">
-            <b>elementum</b>
-          </span>
-          <span class="vertical-part">
-            <b>gravida</b>
-          </span>
-          <span class="vertical-part">
-            <b>ex</b>
-          </span>
-          <span class="vertical-part">
-            <b>at</b>
-          </span>
-          <span class="vertical-part">
-            <b>maximus.</b>
-          </span>
-          <span class="vertical-part">
-            <b>Nullam</b>
-          </span>
-          <span class="vertical-part">
-            <b>quis</b>
-          </span>
-          <span class="vertical-part">
-            <b>leo</b>
-          </span>
-          <span class="vertical-part">
-            <b>ipsum.</b>
-          </span>
-          <span class="vertical-part">
-            <b>Lorem</b>
-          </span>
-          <span class="vertical-part">
-            <b>ipsum</b>
-          </span>
-          <span class="vertical-part">
-            <b>Nam</b>
-          </span>
-          <span class="vertical-part">
-            <b>consectetur</b>
-          </span>
-          <span class="vertical-part">
-            <b>malesuada</b>
-          </span>
-          <span class="vertical-part">
-            <b>blandit.</b>
-          </span>
-          <span class="vertical-part">
-            <b>Mauris</b>
-          </span>
-          <span class="vertical-part">
-            <b>vulputate</b>
-          </span>
-          <span class="vertical-part">
-            <b>purus</b>
-          </span>
-          <span class="vertical-part">
-            <b>id</b>
-          </span>
-          <span class="vertical-part">
-            <b>dolor</b>
-          </span>
-          <span class="vertical-part">
-            <b>euismod</b>
-          </span>
-          <span class="vertical-part">
-            <b>varius.</b>
+            <b>CSS</b>
           </span>
         </div>
       </div>
@@ -490,13 +332,12 @@
 </div>
 <footer>
 <div class="footer-basic">
-    <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
+    <div class="social"><a href="https://www.instagram.com/itsdivine_joseph2/"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://twitter.com/itsdivinejoseph"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/in/divine-joseph-18902b254/"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
     <ul class="list-inline">
       <li class="list-inline-item"><a href="index.html">Home</a></li>
       <li class="list-inline-item"><a href="About.html">About</a></li>
       <li class="list-inline-item"><a href="Works.html">Works</a></li>
-      <li class="list-inline-item"><a href="#">Terms</a></li>
-      <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+      <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
     </ul>
     <p class="copyright">Divine Joseph © 2023</p>
   </footer>
