--- a/Works.html
+++ b/Works.html
@@ -75,14 +75,14 @@
         </div>
         <div class="col-sm-6">
           <h3 class="text-center project-head">Weather App</h3>
-          <p>ddddddddddddddddddddg ghhhhhhhhhhh jjj kkkkk jjjjj jk jkm ohjjnnnkk jjkmmmkk jjmmmmk jjnkkk kkkjkkkk jjmmm,, jjmmn jkmmn </p>
+          <p>I created this weather app for my sheodes plus final project using Html, Javascript and CSS. It tells the temperature, humidity, windspeed and time of any searched location </p>
           <a class="project-link" href="https://blue-aesthetic-weather-app.netlify.app/">See Project</a>
         </div>  
       </div>
        <div class="row">
         <div class="col-sm-6">
           <h3 class="text-center project-head">NGO Landing Page</h3>
-          <p>ddddddddddddddddddddg ghhhhhhhhhhh jjj kkkkk jjjjj jk jkm ohjjnnnkk jjkmmmkk jjmmmmk jjnkkk kkkjkkkk jjmmm,, jjmmn jkmmn </p>
+          <p>I made an NGO landing page on leukemia awareness  as my Shecodes basic final project using Html, JavaScript and CSS</p>
           <a class="project-link" href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/001/414/654/original/project-1.html?1674433084">See Project</a>
           </div>
           <div class="col-sm-6">
@@ -92,13 +92,12 @@
     </div>
     <div class="footer">
       <div class="footer-basic">
-        <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
+        <div class="social"><a href="https://www.instagram.com/itsdivine_joseph2/"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="https://twitter.com/itsdivinejoseph"><i class="icon ion-social-twitter"></i></a><a href="https://www.linkedin.com/in/divine-joseph-18902b254/"><i class="icon" ></i><ion-icon name="logo-linkedin"></ion-icon></a></div>
         <ul class="list-inline">
           <li class="list-inline-item"><a href="index.html">Home</a></li>
           <li class="list-inline-item"><a href="About.html">About</a></li>
           <li class="list-inline-item"><a href="Works.html">Works</a></li>
-          <li class="list-inline-item"><a href="#">Terms</a></li>
-          <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+          <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
         </ul>
         <p class="copyright">Divine Joseph © 2023</p>
       </div>
