--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
       integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
       crossorigin="anonymous"
     ></script>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"
+    />
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
@@ -31,6 +39,16 @@
             <h1 class="heading1">Hello!</h1>
             <h2>I'm Divine Joseph</h2>
             <h3>Front end developer based in uk</h3>
+            <div class="social">
+              <a href="https://www.instagram.com/itsdivine_joseph2/"
+                ><i class="icon ion-social-instagram"></i></a
+              ><a href="#"><i class="icon ion-social-snapchat"></i></a
+              ><a href="https://twitter.com/itsdivinejoseph"
+                ><i class="icon ion-social-twitter"></i></a
+              ><a href="https://www.linkedin.com/in/divine-joseph-18902b254/"
+                ><i class="icon"></i><ion-icon name="logo-linkedin"></ion-icon
+              ></a>
+            </div>
           </div>
         </div>
 
@@ -38,10 +56,18 @@
           <div class="Info">
             <a href="About.html" class="Infos mb-5 text-center">About Me</a>
             <a class="Infos mb-5 text-center" href="Works.html">My Works</a>
-            <a class="Infos text-center" href="#">Contact</a>
+            <a class="Infos text-center" href="Contact.html">Contact</a>
           </div>
         </div>
       </div>
     </div>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
+    ></script>
   </body>
 </html>
