added link to Github

--- a/Works.html
+++ b/Works.html
@@ -98,6 +98,7 @@
           <li class="list-inline-item"><a href="About.html">About</a></li>
           <li class="list-inline-item"><a href="Works.html">Works</a></li>
           <li class="list-inline-item"><a href="Contact.html">Contact</a></li>
+        <li class="list-inline-item"><a href="https://github.com/itsdeedee">Github</a></li>
         </ul>
         <p class="copyright">Divine Joseph © 2023</p>
       </div>
